# browser-bailiff

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  SECURITY.md  browser_bailiff.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: demo.md  design-notes.md
tests/: test_browser_bailiff.py
