[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-bailiff"
version = "0.2.1"
description = "Audit browser extensions before quiet permissions become operational risk."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
  { name = "David Sarkisyan" }
]
keywords = [
  "browser-extensions",
  "chrome",
  "edge",
  "firefox",
  "security-audit",
  "defensive-security"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: System :: Systems Administration"
]

[project.scripts]
bb = "browser_bailiff:main"
browser-bailiff = "browser_bailiff:main"

[tool.setuptools]
py-modules = ["browser_bailiff"]
